2test/11-argo-workflow/ingressroute-argo.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflow
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.apps.gamehost.fi`)
      kind: Rule
      services:
        - name: argo-server
          port: 2746
          scheme: https
  tls:
    secretName: tls-gamehost
